--- a/src/Tabs.css
+++ b/src/Tabs.css
@@ -88,6 +88,7 @@ font-family: 'Raleway', sans-serif;
   }
   .about-section{
     background-color:rgb(245,245,220,0.383);
+    height:1000px;
   }
   .project-heading{
 	text-align: center;
