--- a/src/Tabs.css
+++ b/src/Tabs.css
@@ -139,3 +139,9 @@ font-size:40px;
   .rank-section{
     background-color:rgb(255,140,0,0.383);
   }
+.blockquote-footer{
+color:white;
+}
+.about-activity{
+color:white;
+}
