--- a/src/Tabs.css
+++ b/src/Tabs.css
@@ -120,7 +120,7 @@ font-size:40px;
 }
 .tech-icons{
 text-align: center;
-width:80px;
+width:100%;
 	background-color:yellow;
 	color:black;
 	padding:0.1rem;
