--- a/src/Tabs.css
+++ b/src/Tabs.css
@@ -125,7 +125,7 @@ width:100%;
 	color:black;
 	padding:0.1rem;
 	margin-top:0%;
-        word-spacing:40px;
+        word-spacing:2em;
 	border-radius: 60px 10px 60px 10px/10px 60px 10px 60px;
 	border: solid 5px rgba(59, 69, 107, 0.007);
 font-family: 'Akaya Telivigala', cursive;
