--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 font-family: 'Raleway', sans-serif;
 	text-align: center;
 	background-color: rgba(23, 28, 49, 0.842);
-	padding-top:4rem;
+	padding-top:400px;
 	height:600px;
 	justify-content: center;
 	align-items: center;
