--- a/src/Tabs.css
+++ b/src/Tabs.css
@@ -90,6 +90,7 @@ font-family: 'Raleway', sans-serif;
   .about-section{
     background-color:rgb(245,245,220,0.383);
     height:1100px;
+padding-bottom:20px;
   }
   .project-heading{
 	text-align: center;
